fix top alignment

--- a/Main/style.css
+++ b/Main/style.css
@@ -44,6 +44,8 @@ body{
 	width: 25vw;
 	padding: 15px;
 	border: 1px solid grey;
+	background-color: pink;
+
 }
 .instructions{
 	padding-top: 15px;
@@ -142,10 +144,11 @@ body{
 
 #content {
 	width: 35vw;
-	margin: auto 20px;
+	margin: 60px 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
+	/*background-color: green;*/
 }
 
 #sketch {
